Increase MaxPermSize because https://jenkins.ci.cloudbees.com/job/plugins/job/jobConfigHistory-plugin/ has problems.