@@ -165,7 +165,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>${argLine} -Xms256m -Xmx512m</argLine>
+                    <argLine>${argLine} -Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <testFailureIgnore>false</testFailureIgnore>
                 </configuration>
@@ -175,7 +175,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>${argLine} -Xms256m -Xmx512m</argLine>
+                    <argLine>${argLine} -Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
